# Gaz

./: CMakeLists.txt  main.cpp
headers/: Ball.hpp  Rect.hpp  Wall.hpp  work
no_headers/: .main.cpp.swp  Ball.cpp  Rect.cpp  Wall.cpp  main.cpp
source/: Rect.hpp
